# binf

./: .gitignore
bench-scripts/: i2-runs.sh  i2-thread-runs.sh
custom/: CMakeLists.txt  main.cpp
exporter/src/iHMMuneAlign/: AlignmentThread.java  DPWriter.java  GeneInfo.java  HTML_Writer.java  HTMLforWWW_Writer.java  RegionInfo.java  Utils.java  VnDnJCnoC.java
exporter2/src/iHMMuneAlign/: A_Score.java  AlignmentThread.java  BLASTResult.java  BestVGeneFinder.java  Codon.java  CodonHelperFunctions.java  ExponentialDecay.java  FakeAnnotation.java  FastaReader.java  GlobalDefines.java  HTMLforCSV_Writer.java  JGeneReadingFrame.java  MutabilityScore.java  MutabilityScoreTrinucleotide.java  MutationSpectrum.java  PathNode.java  PostAlignProcessing.java  ProbabilityHolder.java  TrailingJGeneVectorFinder.java  Utils.java  nonGUI.java  (+2 more)
mlpack/: CMakeLists.txt  main.cpp
mlpack/cmake/Modules/: FindLibXML++.cmake
reportA/: data.tex  data2.tex  thesis.bib  thesis.tex
reportA/time-bench/: format.py
reportB/: abbreviations.tex  abstract.tex  acknowledgements.tex  blastOutput-min.xml  conclusion.tex  data2.tex  definitions.tex  eval-runtime-both.tex  eval-threads.tex  evaluation.tex  format-resutls.py  format-thread-results.py  i1-results.txt  i2-results.txt  mywork.tex  partA.tex  pubs.bib  sample-thesis.tex
reportB/results/: i1-results.txt  i2-results03.txt  i2-results09.txt  i2-results1.txt  i2-results10.txt  i2-results11.txt  i2-results12.txt  i2-results2.txt  i2-results4.txt  i2-results5.txt  i2-results6.txt  i2-results7.txt  i2-results8.txt
seminar/: slides.tex
(+8 files in other folders)
